Fix text wrapping on departments and filters.

--- a/styles/department-list.styl
+++ b/styles/department-list.styl
@@ -5,7 +5,7 @@
 
   .filter-item
     position: relative
-    padding: 0 12px
+    padding: 12px 12px 10px
     
     &::after
       position: absolute
@@ -21,13 +21,11 @@
 
   .name
     width: 100%
-    height: 48px
     padding-right: 60px
     font-size: 16px
 
     p
       margin: 0
-      line-height: 48px
 
   .count
     position: absolute
