--- a/styles/refinement-list.styl
+++ b/styles/refinement-list.styl
@@ -35,8 +35,7 @@
       position: relative
       display: block
       width: 100%
-      height: 48px
-      padding: 0 12px
+      padding: 12px
       background: none
       border: 0
       font-family: $font-family
@@ -54,6 +53,7 @@
 
     .name
       position: relative
+      padding-right: 60px
       padding-left: 36px
       font-size: 16px
 
